[project]
name = "rl-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "rich>=15.0.0",
    "sb3-contrib>=2.8.0",
    "stable-baselines3>=2.8.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
]
